mass refactoring