@@ -1,6 +1,9 @@
 package com.foxminded.car_rest_service.security;
 
+import java.util.Collections;
+import java.util.List;
 import lombok.AllArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
@@ -10,7 +13,6 @@ import org.springframework.security.oauth2.jwt.JwtClaimNames;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.stereotype.Component;
-
 import java.util.Collection;
 import java.util.Map;
 import java.util.Set;
@@ -18,37 +20,41 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Component
-@AllArgsConstructor
 public class JwtAuthConverter implements Converter<Jwt, AbstractAuthenticationToken> {
 
-	private final JwtAuthConverterProperties properties;
+  private static final String JWT_CLAIM_WITH_CLIENTS = "resource_access";
+  private static final String JWT_CLAIM_WITH_ROLES = "roles";
+  private static final JwtGrantedAuthoritiesConverter JWT_CONVERTER =
+      new JwtGrantedAuthoritiesConverter();
 
-	private final static JwtGrantedAuthoritiesConverter JWT_CONVERTER = new JwtGrantedAuthoritiesConverter();
+  @Value(("${spring.security.oauth2.resourceserver.jwt.client-id}"))
+  private String keycloakClient;
 
-	@Override
-	public AbstractAuthenticationToken convert(Jwt jwt) {
-		Collection<GrantedAuthority> authorities = Stream
-				.concat(JWT_CONVERTER.convert(jwt).stream(), extractResourceRoles(jwt).stream())
-				.collect(Collectors.toSet());
-		return new JwtAuthenticationToken(jwt, authorities, getPrincipalClaimName(jwt));
-	}
+  @Override
+  public AbstractAuthenticationToken convert(Jwt jwt) {
+    Collection<GrantedAuthority> authorities =
+        Stream.concat(JWT_CONVERTER.convert(jwt).stream(), extractResourceRoles(jwt).stream())
+            .collect(Collectors.toSet());
+    return new JwtAuthenticationToken(jwt, authorities);
+  }
 
-	private String getPrincipalClaimName(Jwt jwt) {
-		String claimName = JwtClaimNames.SUB;
-		if (properties.getPrincipalAttribute() != null) {
-			claimName = properties.getPrincipalAttribute();
-		}
-		return jwt.getClaim(claimName);
-	}
+  private Collection<? extends GrantedAuthority> extractResourceRoles(Jwt jwt) {
+    if (jwt.getClaim(JWT_CLAIM_WITH_CLIENTS) == null) {
+      return Collections.emptySet();
+    }
 
-	private Collection<? extends GrantedAuthority> extractResourceRoles(Jwt jwt) {
-		Map<String, Object> resourceAccess = jwt.getClaim("resource_access");
-		Map<String, Object> resource = (Map<String, Object>) resourceAccess.get(properties.getResourceId());
-		Collection<String> resourceRoles = (Collection<String>) resource.get("roles");
-		if (resourceAccess == null || resource == null || resourceRoles == null) {
-			return Set.of();
-		}
-		return resourceRoles.stream().map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-				.collect(Collectors.toSet());
-	}
+    final Map<String, List<String>> clients = jwt.getClaim(JWT_CLAIM_WITH_CLIENTS);
+    final Map<String, List<String>> clientRoles = getClientRoles(clients);
+
+    if (clientRoles == null || clientRoles.get(JWT_CLAIM_WITH_ROLES) == null) {
+      return Collections.emptySet();
+    }
+
+    final List<String> roles = clientRoles.get(JWT_CLAIM_WITH_ROLES);
+    return roles.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toSet());
+  }
+
+  private Map<String, List<String>> getClientRoles(Map<String, List<String>> resourceRoles) {
+    return (Map<String, List<String>>) resourceRoles.get(keycloakClient);
+  }
 }
